# ARES-51

./: .gitignore  CAPO-AI-PRCT-ENGINE-COMPLETE.md  CLAUDE.md  Cargo.toml  GITHUB_REGISTRY_GUIDE.md  NEXT_STEPS_DELFICTUS.md  PERSONAL_REGISTRY_SETUP.md  PUBLICATION_GUIDE.md  README.md  run_prct_validation.sh  serena_config.json  serena_config.yml  start_serena.sh  test_structure_generation.rs
ares-csf-core/: Cargo.toml  README.md
ares-csf-core/src/: demo.rs  energy_functional.rs  envelope.rs  error.rs  lib.rs  phase_packet.rs  ports.rs  tensor.rs  tensor_real.rs  tensor_verification.rs  types.rs
ares-csf-core/src/hpc/: distributed_computing.rs  gpu_acceleration.rs  memory_optimization.rs  mod.rs  performance_profiler.rs  simd_operations.rs  streaming_processor.rs
ares-csf-core/src/integration/: mod.rs  monitoring.rs  runtime.rs  testing.rs
ares-csf-core/src/variational/: mod.rs
ares-neuromorphic-core/: Cargo.toml  README.md
ares-neuromorphic-core/src/: core.rs  lib.rs  reservoir.rs  signals.rs  spike.rs  types.rs
ares-spike-encoding/: Cargo.toml  README.md
ares-spike-encoding/src/: encoding.rs  lib.rs  presets.rs  types.rs
foundation/: .dockerignore  .editorconfig  .gitignore  .gitignore_global  .gitmessage  .strategic_roadmap_meta  ARES_CRATES_COMPLETE.md  ARES_Executive_Summary_Updated.md  ARES_Executive_Summary_Updated.tex  CLAUDE.md  CLAUDE.md.backup-20250904-055518  Cargo.toml  Dockerfile  Dockerfile.dev-interactive  ENTERPRISE_EVALUATION_REPORT.md  Justfile  LICENSE  Makefile  PHASE_2A_IMPLEMENTATION.md  QUANTUM_TEMPORAL_SYSTEMS_ENGINEERING_FRAMEWORK.md  README.md  RISK_ASSESSMENT_ENGINE_IMPLEMENTATION.md  SANDBOX_TODO_ELIMINATION_REPORT.md  VALIDATION_TESTING_IMPLEMENTATION.md  complete_lockfree_spmc_channel.rs  csf_build_fix_orchestrator.markdown  deny.toml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run-dev-container.sh  run_paper_trading.sh  rust_async_delta_force(1).markdown  rust_parallel_vanguard.markdown  start-trading.sh  test-resonance-trading.sh  test_workload.sh
foundation/.continue.backup-20250904-055502/rules/: ares-goal2-pcb-implementation.md  ares-goal3-chronosynclastic-determinism.md  new-rule-1.md  new-rule.md  ttw-foundation-implementation.md  ttw-production-implementation.md
foundation/.devcontainer/: Dockerfile  devcontainer.json
foundation/.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
foundation/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
foundation/.github/workflows/: ci.yml  critical-path-validation.yml  enterprise-cicd.yml  performance-bench.yml  phase_1_2_validation.yml  production-deploy.yml  release.yml  security-audit.yml
foundation/.gitignore_patterns/: csf_bus.long-type-9490577614338615765.txt
foundation/.serena/: project.yml
foundation/.serena/memories/: architecture_overview.md  code_style_conventions.md  implementation_rules.md  project_overview.md  suggested_commands.md  system_utilities.md  task_completion_workflow.md
foundation/artifacts/: run_log.jsonl
foundation/benches/: throughput.rs
foundation/config/: default.toml  dev.toml
foundation/crates/ares-neuromorphic-cli/: Cargo.toml  README.md
foundation/crates/ares-trading/: Cargo.toml  README.md  RESONANCE_TRADING.md  RUN_INSTRUCTIONS.md  SETUP_GUIDE.md  config.toml
foundation/crates/csf-bus/: Cargo.toml
foundation/crates/csf-clogic/: Cargo.toml
foundation/crates/csf-core/: Cargo.toml
foundation/crates/csf-enterprise/: Cargo.toml
foundation/crates/csf-ffi/: Cargo.toml  build.rs
foundation/crates/csf-hardware/: Cargo.toml
foundation/crates/csf-kernel/: Cargo.toml
foundation/crates/csf-mlir/: Cargo.toml
foundation/crates/csf-network/: Cargo.toml
foundation/crates/csf-protocol/: Cargo.toml
foundation/crates/csf-quantum/: Cargo.toml
foundation/docs/: API_REFERENCE.md  API_REFERENCE_GUIDE.md  ARCHITECTURE.md  ARES-NEUROMORPHIC-CLI-ENTERPRISE-GUIDE.md  CI.md  CODING_STANDARDS.md  COMPREHENSIVE_SYSTEM_ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DETERMINISM.md  EMERGENCE_INDICATORS.md  HISTORICAL_DATA_SYSTEM.md  INTEGRATION_EXAMPLES_GUIDE.md  OBSERVABILITY.md  PERFORMANCE.md  PERFORMANCE_TROUBLESHOOTING_GUIDE.md  PHASE_LATTICE_COMPUTATION.md  QUICK_START.md  README.md  RELEASES.md  SECURITY.md  STRATEGIC_ROADMAP.md  SUCCESS_METRICS.md  TESTING.md  THREAT_MODEL.md  continue_agent.md
foundation/enterprise-eval/: Cargo.toml
foundation/examples/: README.md  comprehensive_ares_demo.rs  historical_data_validation.rs  historical_minute_minimal.rs  historical_minute_resonance_prediction.rs  market_data_integration.rs  spike_to_resonance_demo.rs  success_metrics_integration.rs
foundation/monitoring/: README.md  docker-compose.yml  prometheus.yml
foundation/neuromorphic-trading/: Cargo.toml  PLACEHOLDER_REVIEW.md  README.md  build.rs
foundation/proof_of_power/: Cargo.toml
foundation/proof_of_power_standalone/: Cargo.toml
foundation/scripts/: animate_market_predictions.py  ares_sanity.sh  build-release.sh  check-protocol-compliance.sh  comprehensive_security_test.sh  deploy-monitoring-stack.sh  deploy-observability-stack.sh  deploy-security-stack.sh  deploy_production.sh  enforce_single_source.sh  enterprise_security_validation.sh  enterprise_temporal_audit.sh  enterprise_temporal_remediation.sh  phase_2a_performance_benchmark.rs  phase_2a_validator.sh  run_phase_1_2_validation.sh  safety_validation.sh  setup-dev.sh  setup-neuromorphic-env.sh  setup-vault-secrets.sh  stress-test.sh  validate_mlir_security.sh  verify_production_readiness.sh  worktree-helper.sh
foundation/tests/: integration_test.rs
foundation/tools/: panic_analyzer.rs
foundation/website/: docusaurus.config.ts  package.json  sidebars.ts
prct-engine/: Cargo.toml  PRCT_Algorithm_Specification.md  test_compilation.sh
prct-engine/prct_demo_structures/: demo_summary.json
prct-engine/src/: foundation_integration.rs  foundation_sim.rs  lib.rs
prct-engine/test_casp_dir/: T1024.seq  T1025.seq  T1026.seq
prct-engine/test_results/: casp16_validation_report.json
(+1914 files in other folders)
