[workspace]
resolver = "2"
members = [
    "ares-neuromorphic-core",
    "ares-spike-encoding", 
    "ares-csf-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ididia Serfaty <ididiaserfaty@protonmail.com>"]
license = "MIT"
repository = "https://github.com/ares-systems/ares-libraries"
homepage = "https://github.com/ares-systems/ares-libraries"
documentation = "https://docs.rs/ares-libraries"

[workspace.dependencies]
# Core dependencies shared across crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
bytes = { version = "1.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Math and tensor operations
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
num-complex = "0.4"

# Async and concurrency
crossbeam-channel = "0.5"
flume = "0.11"

# System information
num_cpus = "1.16"
sysinfo = "0.30"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true