[package]
name = "prct-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ididia Serfaty <ididiaserfaty@protonmail.com>"]
description = "Phase Resonance Chromatic-TSP Engine for Protein Folding"
license = "Proprietary"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
sha2 = "0.10"
md5 = "0.7"
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"
statrs = "0.16"
bio = "1.4"
petgraph = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
assert_approx_eq = "1.1"

[[bench]]
name = "dataset_benchmarks"
harness = false

[[bench]]
name = "prct_algorithm_benchmarks" 
harness = false