[package]
name = "prct-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ididia Serfaty <ididiaserfaty@protonmail.com>"]
description = "Phase Resonance Chromatic-TSP Engine for Protein Folding"
license = "Proprietary"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
sha2 = "0.10"
md5 = "0.7"
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
nalgebra = { version = "0.33", features = ["std", "rand"] }
statrs = "0.17"
petgraph = "0.6"
num-complex = "0.4"
rand = "0.8"
approx = "0.5"
regex = "1.10"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }

# ARES Foundation System Integration - WORKING SIMULATION
# Note: Using internal foundation_sim module instead of external crates due to compilation issues
# csf-core = { path = "../foundation/crates/csf-core" }
# csf-bus = { path = "../foundation/crates/csf-bus" }
# csf-clogic = { path = "../foundation/crates/csf-clogic" }
# csf-time = { path = "../foundation/crates/csf-time" }
# csf-mlir = { path = "../foundation/crates/csf-mlir" }
# csf-quantum = { path = "../foundation/crates/csf-quantum" }
# csf-shared-types = { path = "../foundation/crates/csf-shared-types" }
# hephaestus-forge = { path = "../foundation/crates/hephaestus-forge", features = ["full"] }

# Additional high-performance dependencies for foundation integration
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
assert_approx_eq = "1.1"

# Binary executables for cloud deployment
[[bin]]
name = "casp16-downloader"
path = "src/bin/casp16_downloader.rs"

[[bin]]
name = "prct-validator" 
path = "src/bin/prct_validator_simple.rs"

[[bin]]
name = "report-generator"
path = "src/bin/report_generator.rs"

[[bin]]
name = "benchmark-suite"
path = "src/bin/benchmark_suite_simple.rs"

[[bin]]
name = "import-test"
path = "src/bin/import_test.rs"

# Benchmarks will be added later
# [[bench]]
# name = "dataset_benchmarks"
# harness = false

# [[bench]]
# name = "prct_algorithm_benchmarks" 
# harness = false