[package]
name = "neuromorphic-trading"
version = "0.1.0"
edition = "2021"
authors = ["ARES Neuromorphic Team"]
license = "Proprietary"
description = "Hybrid neuromorphic-deterministic trading system"

[[bin]]
name = "neuromorphic-trading"
path = "src/main.rs"

[dependencies]
# Python interop for Brian2
pyo3 = { version = "0.24", features = ["auto-initialize"] }
numpy = "0.24"

# Core processing
ndarray = { version = "0.16", features = ["blas", "rayon"] }
nalgebra = "0.33"
num-complex = "0.4"
num-traits = "0.2"

# Async and parallelism
tokio = { version = "1.41", features = ["full"] }
rayon = "1.10"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Data structures
ringbuffer = "0.15"
dashmap = "6.1"
ahash = "0.8"
smallvec = "1.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WebSocket and networking
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
async-trait = "0.1"

# Additional data structures
ordered-float = "4.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Trading components
rust_decimal = "1.36"

# ID generation
nanoid = "0.4"

# Randomness
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Memory management
memmap2 = "0.9"
once_cell = "1.20"
aligned-vec = "0.5"
libc = "0.2"

[features]
default = ["cpu-only"]
cpu-only = []
cuda-accel = []
backtesting = []
brian2_available = []
cuda_available = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
approx = "0.5"

[build-dependencies]
pyo3-build-config = "0.22"

[[bench]]
name = "spike_encoding"
harness = false

[[bench]]
name = "event_bus"
harness = false

[[bench]]
name = "reservoir"
harness = false