[package]
name = "csf-clogic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "C-LOGIC modules (DRPP, ADP, EGC, EMS) for ARES CSF"

[dependencies]
# Protocol layer - canonical packet definitions
csf-protocol = { path = "../csf-protocol" }

# Core dependencies
csf-core = { path = "../csf-core" }
csf-bus = { path = "../csf-bus" }
csf-kernel = { path = "../csf-kernel" }
csf-shared-types = { path = "../csf-shared-types" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Data structures
dashmap = { workspace = true }
crossbeam = { workspace = true }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
parking_lot = { workspace = true }

# Math and statistics
nalgebra = { workspace = true }
ndarray = { workspace = true }
statrs = { workspace = true }
num-traits = { workspace = true }

# Machine learning
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
once_cell = "1.19"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Spatial data structures
kdtree = "0.6"

# Missing dependencies
rand = { workspace = true }
rayon = { workspace = true }
num-complex = { workspace = true }
csf-sil = { path = "../csf-sil" }
num_cpus = "1.16"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
approx = { workspace = true }

[features]
cuda = []