[package]
name = "csf-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "FFI bindings for ARES CSF external integration"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core dependencies
csf-core = { path = "../csf-core" }
csf-bus = { path = "../csf-bus" }
csf-kernel = { path = "../csf-kernel" }
csf-shared-types = { path = "../csf-shared-types" }
csf-protocol = { path = "../csf-protocol" }
csf-mlir = { path = "../csf-mlir", optional = true }

# FFI support
libc = "0.2"
cbindgen = "0.26"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# Python integration
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

# JavaScript/WASM integration
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# gRPC integration
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[features]
default = ["python", "grpc"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
grpc = ["tonic", "prost", "tonic-build"]
mlir = ["csf-mlir"]
cuda = ["csf-mlir/cuda"]
all-bindings = ["python", "wasm", "grpc", "mlir"]

[build-dependencies]
cbindgen = "0.26"

[build-dependencies.tonic-build]
version = "0.11"
optional = true

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }

# [[example]]
# name = "c_example"
# crate-type = ["cdylib"]

# [[example]]
# name = "python_example"
# required-features = ["python"]