[package]
name = "csf-hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
csf-core = { path = "../csf-core" }
csf-time = { path = "../csf-time" }

# System libraries
libc = "0.2.153"
nix = { version = "0.27", features = ["sched", "process"] }
raw-cpuid = "11.5"
parking_lot = "0.12"
num_cpus = "1.16"

# Memory management
memmap2 = "0.5"
zerocopy = "0.7"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Logging
tracing = "0.1.40"

# Time
quanta = "0.9.0"

# x86_64 intrinsics are now handled via core::arch::x86_64
# [target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 = "0.15"

[features]
default = []
cuda = []
neuromorphic = []

[build-dependencies]
cc = { workspace = true }